<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_upload_tutorials"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/txt_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_here_we_have_a_details_of_the_task"
                android:textSize="20sp" />

            <!-- Add more views here if needed -->


            <Button
                android:id="@+id/btn_edit"
                android:text="@string/edit"
                android:layout_gravity="center"
                 android:layout_height="wrap_content"
                android:layout_width="match_parent"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
